actualización enpoint regitro
